Fix more overlapping in some cards

--- a/client/components/post-card/style.scss
+++ b/client/components/post-card/style.scss
@@ -88,10 +88,10 @@
 	}
 
 	&.is-photo {
-		min-height: 168px;
-		padding: 20px;
+		min-height: 160px;
+		padding: 20px 20px 12px;
 
-		&:before{
+		&::before{
 			background: $gray-dark;
 			content: '';
 			height: 100%;
@@ -109,15 +109,9 @@
 
 		.post-card__search-title {
 			display: block;
-			padding-right: 20px;
+			padding: 30px 20px 0 0;
 			position: relative;
-				top: 100px;
 			z-index: 1;
-
-			@include breakpoint( ">480px" ) {
-				display: inline;
-				top: 80px;
-			}
 		}
 
 		.post-card__search-title-link {
@@ -130,11 +124,6 @@
 
 		.post-card__search-byline {
 			position: relative;
-				top: 100px;
-
-				@include breakpoint( ">480px" ) {
-					top: 80px;
-				}
 
 			a,
 			a:visited {
@@ -152,6 +141,10 @@
 
 		.post-card__search-social {
 			position: relative;
+		}
+
+		.post-card__search-excerpt {
+			display: none;
 		}
 
 		.gridicon {
@@ -187,7 +180,7 @@
 	display: inline;
 	@extend %content-font;
 	font-size: 20px;
-	line-height: 20px;
+	line-height: 1.2;
 	font-weight: 700;
 
 	@include breakpoint( ">480px" ) {
@@ -244,11 +237,6 @@
 	font-size: 13px;
 	list-style: none;
 	margin: 6px 0;
-	padding: 0 0 10px 0;
-
-	@include breakpoint( ">480px" ) {
-		padding: 0 0 20px 0;
-	}
 
 	.gravatar {
 		vertical-align: text-bottom;
